--- a/Medicine Recommendation System.ipynb
+++ b/Medicine Recommendation System.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "4e4766bf",
    "metadata": {},
    "outputs": [],
@@ -32,17 +32,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "56ce4778",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = pd.read_csv('Training.csv')"
+    "dataset = pd.read_csv('datasets/Training.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "5f18d6d2",
    "metadata": {},
    "outputs": [
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "f49b2b12",
    "metadata": {},
    "outputs": [],
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "b1e9c647",
    "metadata": {},
    "outputs": [],
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "4cb2e972",
    "metadata": {},
    "outputs": [],
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "a74ad639",
    "metadata": {},
    "outputs": [
@@ -647,7 +647,7 @@
        "1.0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 11,
    "id": "fdd98daa",
    "metadata": {},
    "outputs": [],
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 12,
    "id": "4dd13145",
    "metadata": {},
    "outputs": [],
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 13,
    "id": "8bf40f9d",
    "metadata": {},
    "outputs": [
@@ -701,7 +701,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\naimat\\anaconda3\\lib\\site-packages\\sklearn\\base.py:465: UserWarning: X does not have valid feature names, but SVC was fitted with feature names\n",
+      "c:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\utils\\validation.py:2749: UserWarning: X does not have valid feature names, but SVC was fitted with feature names\n",
       "  warnings.warn(\n"
      ]
     }
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 14,
    "id": "786bfd1a",
    "metadata": {},
    "outputs": [
@@ -730,7 +730,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\naimat\\anaconda3\\lib\\site-packages\\sklearn\\base.py:465: UserWarning: X does not have valid feature names, but SVC was fitted with feature names\n",
+      "c:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\utils\\validation.py:2749: UserWarning: X does not have valid feature names, but SVC was fitted with feature names\n",
       "  warnings.warn(\n"
      ]
     }
@@ -759,22 +759,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 17,
    "id": "767ed813",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sym_des = pd.read_csv(\"symtoms_df.csv\")\n",
-    "precautions = pd.read_csv(\"precautions_df.csv\")\n",
-    "workout = pd.read_csv(\"workout_df.csv\")\n",
-    "description = pd.read_csv(\"description.csv\")\n",
-    "medications = pd.read_csv('medications.csv')\n",
-    "diets = pd.read_csv(\"diets.csv\")"
+    "sym_des = pd.read_csv(\"datasets/symtoms_df.csv\")\n",
+    "precautions = pd.read_csv(\"datasets/precautions_df.csv\")\n",
+    "workout = pd.read_csv(\"datasets/workout_df.csv\")\n",
+    "description = pd.read_csv(\"datasets/description.csv\")\n",
+    "medications = pd.read_csv('datasets/medications.csv')\n",
+    "diets = pd.read_csv(\"datasets/diets.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 22,
    "id": "6cb123a9",
    "metadata": {},
    "outputs": [],
@@ -813,50 +813,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "id": "a36b1e93",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter your symptoms.......itching,skin_rash,nodal_skin_eruptions\n",
-      "=================predicted disease============\n",
-      "Fungal infection\n",
-      "=================description==================\n",
-      "Fungal infection is a common skin condition caused by fungi.\n",
-      "=================precautions==================\n",
-      "1 :  bath twice\n",
-      "2 :  use detol or neem in bathing water\n",
-      "3 :  keep infected area dry\n",
-      "4 :  use clean cloths\n",
-      "=================medications==================\n",
-      "5 :  ['Antifungal Cream', 'Fluconazole', 'Terbinafine', 'Clotrimazole', 'Ketoconazole']\n",
-      "=================workout==================\n",
-      "6 :  Avoid sugary foods\n",
-      "7 :  Consume probiotics\n",
-      "8 :  Increase intake of garlic\n",
-      "9 :  Include yogurt in diet\n",
-      "10 :  Limit processed foods\n",
-      "11 :  Stay hydrated\n",
-      "12 :  Consume green tea\n",
-      "13 :  Eat foods rich in zinc\n",
-      "14 :  Include turmeric in diet\n",
-      "15 :  Eat fruits and vegetables\n",
-      "=================diets==================\n",
-      "16 :  ['Antifungal Diet', 'Probiotics', 'Garlic', 'Coconut oil', 'Turmeric']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\naimat\\anaconda3\\lib\\site-packages\\sklearn\\base.py:465: UserWarning: X does not have valid feature names, but SVC was fitted with feature names\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test 1\n",
     "# Split the user's input into a list of symptoms (assuming they are comma-separated) # itching,skin_rash,nodal_skin_eruptions\n",
@@ -896,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": null,
    "id": "2d7ee79b",
    "metadata": {},
    "outputs": [
@@ -979,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 1,
    "id": "a8d5df35",
    "metadata": {},
    "outputs": [
@@ -987,7 +947,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.3.2\n"
+      "1.7.0\n"
      ]
     }
    ],
@@ -1009,7 +969,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1023,7 +983,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
